--- a/index.htm
+++ b/index.htm
@@ -91,7 +91,7 @@
             <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-3 sm:mb-4 text-shadow">ayakaOS</h1>
             <p class="text-base sm:text-xl lg:text-2xl mb-6 sm:mb-8 max-w-xl mx-auto leading-relaxed">专业级Arch体验，开箱即用</p>
             <div class="flex justify-center">
-                <a href="#download" class="btn-hover bg-primary text-white btn-adapt rounded-lg font-medium">立即下载 ⬇️</a>
+                <a href="#download" class="btn-hover bg-primary text-white btn-adapt rounded-lg font-medium">立即下载</a>
             </div>
         </div>
     </section>
