--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
             * { touch-action: manipulation; box-sizing: border-box; }
         }
         .hero {
-            background: linear-gradient(rgba(30, 41, 59, 0.9), rgba(30, 41, 59, 0.9)), url('https://github.com/ayakaOS/ayakaos.github.io/blob/main/background.png');
+            background: linear-gradient(rgba(30, 41, 59, 0.9), rgba(30, 41, 59, 0.9)), url('https://github.com/ayakaOS/ayakaos.github.io/blob/main/background.png?raw=true');
             background-size: cover; background-position: center; background-attachment: fixed;
         }
     </style>
