--- a/index.htm
+++ b/index.htm
@@ -266,7 +266,6 @@
                         <li><a href="#download" class="hover:text-primary transition-colors">下载</a></li>
                         <li><a href="#docs" class="hover:text-primary transition-colors">文档</a></li>
                         <li><a href="#team" class="hover:text-primary transition-colors">团队</a></li>
-                        <li><a href="#community" class="hover:text-primary transition-colors">社区</a></li>
                     </ul>
                 </div>
                 <div class="hidden lg:block">
@@ -274,8 +273,8 @@
                     <ul class="space-y-1 sm:space-y-2 text-gray-400 text-xs sm:text-sm">
                         <li><a href="https://github.com/ayakaOS/ayakaOS" target="_blank" class="hover:text-primary transition-colors">GitHub 仓库</a></li>
                         <li><a href="https://wiki.archlinux.org" target="_blank" class="hover:text-primary transition-colors">Arch Wiki</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">常见问题</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">捐赠支持</a></li>
+                        <li><a href="https://space.bilibili.com/3691009835797244" class="hover:text-primary transition-colors">哔哩哔哩</a></li>
+                        <li><a href="https://qm.qq.com/q/xYLsNNrx8Q" class="hover:text-primary transition-colors">QQ群/a></li>
                     </ul>
                 </div>
                 <div class="hidden lg:block">
