--- a/index.htm
+++ b/index.htm
@@ -274,7 +274,7 @@
                         <li><a href="https://github.com/ayakaOS/ayakaOS" target="_blank" class="hover:text-primary transition-colors">GitHub 仓库</a></li>
                         <li><a href="https://wiki.archlinux.org" target="_blank" class="hover:text-primary transition-colors">Arch Wiki</a></li>
                         <li><a href="https://space.bilibili.com/3691009835797244" class="hover:text-primary transition-colors">哔哩哔哩</a></li>
-                        <li><a href="https://qm.qq.com/q/xYLsNNrx8Q" class="hover:text-primary transition-colors">QQ群/a></li>
+                        <li><a href="https://qm.qq.com/q/Zi96aWI8AE" class="hover:text-primary transition-colors">QQ群</a></li>
                     </ul>
                 </div>
                 <div class="hidden lg:block">
