--- a/index.htm
+++ b/index.htm
@@ -272,17 +272,9 @@
                     <h4 class="font-semibold mb-3 text-sm sm:text-base">资源</h4>
                     <ul class="space-y-1 sm:space-y-2 text-gray-400 text-xs sm:text-sm">
                         <li><a href="https://github.com/ayakaOS/ayakaOS" target="_blank" class="hover:text-primary transition-colors">GitHub 仓库</a></li>
-                        <li><a href="https://wiki.archlinux.org" target="_blank" class="hover:text-primary transition-colors">Arch Wiki</a></li>
                         <li><a href="https://space.bilibili.com/3691009835797244" class="hover:text-primary transition-colors">哔哩哔哩</a></li>
                         <li><a href="https://qm.qq.com/q/Zi96aWI8AE" class="hover:text-primary transition-colors">QQ群</a></li>
-                    </ul>
-                </div>
-                <div class="hidden lg:block">
-                    <h4 class="font-semibold mb-3 text-sm sm:text-base">法律</h4>
-                    <ul class="space-y-1 sm:space-y-2 text-gray-400 text-xs sm:text-sm">
-                        <li><a href="#" class="hover:text-primary transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">Open Source License</a></li>
+                        <li><a href="https://www.gnu.org/licenses/gpl-3.0.en.html" class="hover:text-primary transition-colors">Open Source License</a></li>
                     </ul>
                 </div>
             </div>
