--- a/index.htm
+++ b/index.htm
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="ayakaOS | 专业级Arch体验，开箱即用">
+    <meta name="description" content="ayakaOS | 基于 Arch Linux 的专业发行版，提供开箱即用的中文体验和完整软件生态">
     <meta name="keywords" content="ayakaOS,Arch Linux,Linux发行版">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>ayakaOS | 专业级Arch体验，开箱即用</title>
+    <title>ayakaOS | 基于 Arch Linux 的专业发行版，提供开箱即用的中文体验和完整软件生态</title>
 
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.tailwindcss.com?v=3.4.1"></script>
@@ -89,7 +89,7 @@
     <section class="hero pt-20 sm:pt-24 md:pt-32 lg:pt-40 pb-16 sm:pb-20 md:pb-24 lg:pb-28 text-center text-light">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-3 sm:mb-4 text-shadow">ayakaOS</h1>
-            <p class="text-base sm:text-xl lg:text-2xl mb-6 sm:mb-8 max-w-xl mx-auto leading-relaxed">专业级Arch体验，开箱即用</p>
+            <p class="text-base sm:text-xl lg:text-2xl mb-6 sm:mb-8 max-w-xl mx-auto leading-relaxed">基于 Arch Linux 的专业发行版，提供开箱即用的中文体验和完整软件生态</p>
             <div class="flex justify-center">
                 <a href="#download" class="btn-hover bg-primary text-white btn-adapt rounded-lg font-medium">立即下载</a>
             </div>
@@ -142,15 +142,6 @@
                     <h3 class="text-lg sm:text-xl font-semibold mb-2">安全更新机制</h3>
                     <p class="text-gray-600 text-sm sm:text-base">滚动更新模式，及时获取安全补丁，保持系统安全可靠</p>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="py-10 sm:py-16 bg-primary/5">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p class="text-base sm:text-xl lg:text-2xl mb-6 sm:mb-8 max-w-2xl mx-auto leading-relaxed">基于 Arch Linux 的专业发行版，提供开箱即用的中文体验和完整软件生态</p>
-            <div class="flex justify-center">
-                <a href="#download" class="btn-hover bg-primary text-white btn-adapt rounded-lg font-medium">立即下载</a>
             </div>
         </div>
     </section>
