--- a/index.htm
+++ b/index.htm
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="ayakaOS | 基于 Arch Linux 的专业发行版，提供开箱即用的中文体验和完整软件生态">
+    <meta name="description" content="ayakaOS | 做，简单的事。">
     <meta name="keywords" content="ayakaOS,Arch Linux,Linux发行版">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>ayakaOS | 基于 Arch Linux 的专业发行版，提供开箱即用的中文体验和完整软件生态</title>
+    <title>ayakaOS | 做，简单的事。</title>
 
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.tailwindcss.com?v=3.4.1"></script>
