--- a/index.htm
+++ b/index.htm
@@ -89,7 +89,7 @@
     <section class="hero pt-20 sm:pt-24 md:pt-32 lg:pt-40 pb-16 sm:pb-20 md:pb-24 lg:pb-28 text-center text-light">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-3 sm:mb-4 text-shadow">ayakaOS</h1>
-            <p class="text-base sm:text-xl lg:text-2xl mb-6 sm:mb-8 max-w-xl mx-auto leading-relaxed">基于 Arch Linux 的专业发行版，提供开箱即用的中文体验和完整软件生态</p>
+            <p class="text-base sm:text-xl lg:text-2xl mb-6 sm:mb-8 max-w-xl mx-auto leading-relaxed">做，简单的事。</p>
             <div class="flex justify-center">
                 <a href="#download" class="btn-hover bg-primary text-white btn-adapt rounded-lg font-medium">立即下载</a>
             </div>
