--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@
                 <a href="#download" class="hover:text-primary transition-colors text-sm sm:text-base">下载</a>
                 <a href="#features" class="hover:text-primary transition-colors text-sm sm:text-base">特性</a>
                 <a href="#docs" class="hover:text-primary transition-colors text-sm sm:text-base">文档</a>
-                <a href="#team" class="hover:text-primary transition-colors text-sm sm:text-base">团队</a>
+                <a href="https://ayakaos.de5.net/" class="hover:text-primary transition-colors text-sm sm:text-base">博客</a>
                 <a href="#community" class="hover:text-primary transition-colors text-sm sm:text-base">社区</a>
             </nav>
             <span class="hidden md:block text-xs sm:text-sm text-gray-300">v26.02</span>
@@ -79,7 +79,7 @@
                 <a href="#download" class="py-2 hover:text-primary transition-colors">下载</a>
                 <a href="#features" class="py-2 hover:text-primary transition-colors">特性</a>
                 <a href="#docs" class="py-2 hover:text-primary transition-colors">文档</a>
-                <a href="#team" class="py-2 hover:text-primary transition-colors">团队</a>
+                <a href="https://ayakaos.de5.net/" class="py-2 hover:text-primary transition-colors">博客</a>
                 <a href="#community" class="py-2 hover:text-primary transition-colors">社区</a>
                 <span class="text-xs text-gray-400 pt-1">v26.02</span>
             </div>
@@ -186,14 +186,14 @@
                     <a href="#" class="text-primary hover:underline flex items-center text-sm sm:text-base">查看全部入门文档 →</a>
                 </div>
                 <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md">
-                    <h3 class="text-lg sm:text-xl font-semibold mb-3 sm:mb-4 pb-2 border-b">系统管理</h3>
+                    <h3 class="text-lg sm:text-xl font-semibold mb-3 sm:mb-4 pb-2 border-b">进阶指南</h3>
                     <ul class="space-y-2 sm:space-y-3 mb-3 sm:mb-4 text-sm sm:text-base">
                         <li><a href="#" class="text-primary hover:underline">BTRFS配置 - 子卷和快照的高级用法</a></li>
                         <li><a href="#" class="text-primary hover:underline">内核定制 - 编译和安装自定义内核</a></li>
                         <li><a href="#" class="text-primary hover:underline">系统优化 - 提升性能和电池续航的技巧</a></li>
                         <li><a href="#" class="text-primary hover:underline">故障排除 - 常见问题和解决方案</a></li>
                     </ul>
-                    <a href="#" class="text-primary hover:underline flex items-center text-sm sm:text-base">查看全部系统管理指南 →</a>
+                    <a href="#" class="text-primary hover:underline flex items-center text-sm sm:text-base">查看全部进阶指南 →</a>
                 </div>
             </div>
         </div>
@@ -238,6 +238,7 @@
                         <li><a href="#download" class="hover:text-primary transition-colors">下载</a></li>
                         <li><a href="#docs" class="hover:text-primary transition-colors">文档</a></li>
                         <li><a href="#team" class="hover:text-primary transition-colors">团队</a></li>
+                        
                     </ul>
                 </div>
                 <div class="hidden lg:block">
@@ -257,6 +258,7 @@
                 <a href="#team" class="hover:text-primary">团队</a>
                 <a href="#community" class="hover:text-primary">社区</a>
                 <a href="https://github.com/ayakaOS/ayakaOS" target="_blank" class="hover:text-primary">GitHub</a>
+                <a href="https://ayakaos.de5.net/" class="hover:text-primary">博客</a>
             </div>
             <div class="border-t border-gray-800 pt-6 sm:pt-8 text-center text-gray-500 text-xs sm:text-sm">
                 © ayakaOS Team
