--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
             * { touch-action: manipulation; box-sizing: border-box; }
         }
         .hero {
-            background: linear-gradient(rgba(30, 41, 59, 0.9), rgba(30, 41, 59, 0.9)), url('https://github.com/ayakaOS/ayakaos.github.io/blob/main/background.png?raw=true');
+            background: linear-gradient(rgba(30, 41, 59, 0.9), rgba(30, 41, 59, 0.9)), url('https://img.cdn1.vip/i/6993b52deb2ac_1771287853.webp');
             background-size: cover; background-position: center; background-attachment: fixed;
         }
     </style>
@@ -69,7 +69,6 @@
                 <a href="https://ayakaos.de5.net/" class="hover:text-primary transition-colors text-sm sm:text-base">博客</a>
                 <a href="#community" class="hover:text-primary transition-colors text-sm sm:text-base">社区</a>
             </nav>
-            <span class="hidden md:block text-xs sm:text-sm text-gray-300">v26.02</span>
             <button id="menuBtn" class="lg:hidden text-light focus:outline-none">
                 <i class="fa fa-bars text-lg sm:text-xl"></i>
             </button>
@@ -81,7 +80,6 @@
                 <a href="#docs" class="py-2 hover:text-primary transition-colors">文档</a>
                 <a href="https://ayakaos.de5.net/" class="py-2 hover:text-primary transition-colors">博客</a>
                 <a href="#community" class="py-2 hover:text-primary transition-colors">社区</a>
-                <span class="text-xs text-gray-400 pt-1">v26.02</span>
             </div>
         </nav>
     </header>
