--- a/index.htm
+++ b/index.htm
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="ayakaOS | Do simple things">
-    <meta name="keywords" content="ayakaOS,Arch Linux,Linux发行版">
+    <meta name="description" content="CaelumOS | Do simple things">
+    <meta name="keywords" content="CaelumOS,Arch Linux,Linux发行版">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>ayakaOS | Do simple things.</title>
+    <title>CaelumOS | Do simple things.</title>
 
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.tailwindcss.com?v=3.4.1"></script>
@@ -99,7 +99,7 @@
 <body class="font-sans text-dark antialiased min-h-screen" data-lang="zh-CN">
     <header id="navbar" class="fixed w-full top-0 z-50 bg-dark/95 text-light py-2 sm:py-3 transition-all duration-300">
         <div class="container mx-auto px-3 sm:px-4 flex justify-between items-center">
-            <a href="./" class="text-lg sm:text-xl font-bold text-white">ayakaOS</a>
+            <a href="./" class="text-lg sm:text-xl font-bold text-white">CaelumOS</a>
             <div class="hidden lg:flex items-center space-x-6 xl:space-x-8">
                 <div class="lang-switcher">
                     <button class="flex items-center space-x-1 hover:text-primary transition-colors text-sm sm:text-base">
@@ -146,7 +146,7 @@
 
     <section class="hero pt-20 sm:pt-24 md:pt-32 lg:pt-40 pb-16 sm:pb-20 md:pb-24 lg:pb-28 text-center text-light">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-3 sm:mb-4 text-shadow">ayakaOS</h1>
+            <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-3 sm:mb-4 text-shadow">CaelumOS</h1>
             <p class="text-base sm:text-xl lg:text-2xl mb-6 sm:mb-8 max-w-xl mx-auto leading-relaxed" data-i18n="slogan">做，简单的事。</p>
             <div class="flex justify-center">
                 <a href="#download" class="btn-hover bg-primary text-white btn-adapt rounded-lg font-medium" data-i18n="download_now">立即下载</a>
@@ -156,7 +156,7 @@
 
     <section id="features" class="py-12 sm:py-16 lg:py-24 bg-light">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="core_features">ayakaOS 核心优势</h2>
+            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="core_features">CaelumOS 核心优势</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md hover:shadow-xl transition-shadow">
                     <div class="w-10 h-10 sm:w-12 sm:h-12 bg-primary/10 rounded-full flex items-center justify-center mb-3 sm:mb-4">
@@ -206,10 +206,10 @@
 
     <section id="download" class="py-12 sm:py-16 lg:py-24 bg-light">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="download_title">下载 ayakaOS</h2>
+            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="download_title">下载 CaelumOS</h2>
             <div class="max-w-2xl sm:max-w-3xl mx-auto bg-white p-5 sm:p-8 rounded-xl shadow-md">
                 <div class="mb-5 sm:mb-6 border-b pb-3 sm:pb-4">
-                    <h3 class="text-lg sm:text-xl font-semibold mb-1">ayakaOS 26</h3>
+                    <h3 class="text-lg sm:text-xl font-semibold mb-1">CaelumOS 26</h3>
                     <p class="text-gray-600 text-sm sm:text-base">26.02</p>
                     <p class="text-gray-500 text-xs sm:text-sm mt-1">Size: 3.2GB</p>
                 </div>
@@ -231,7 +231,7 @@
 
     <section id="docs" class="py-12 sm:py-16 lg:py-24 bg-gray-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="docs_center">ayakaOS 文档中心</h2>
+            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="docs_center">CaelumOS 文档中心</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-8 max-w-4xl sm:max-w-5xl mx-auto">
                 <div class="bg-white p-5 sm:p-6 rounded-xl shadow-md">
                     <h3 class="text-lg sm:text-xl font-semibold mb-3 sm:mb-4 pb-2 border-b" data-i18n="getting_started">入门指南</h3>
@@ -259,9 +259,9 @@
 
     <section id="community" class="py-12 sm:py-16 lg:py-24 bg-light">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="join_community">加入 ayakaOS 社区</h2>
+            <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-10 sm:mb-12 lg:mb-16" data-i18n="join_community">加入 CaelumOS 社区</h2>
             <div class="max-w-2xl sm:max-w-3xl mx-auto space-y-6">
-                <a href="https://github.com/ayakaOS/ayakaOS" target="_blank" class="btn-hover bg-dark text-white p-4 sm:p-6 rounded-xl text-center flex flex-col items-center justify-center block">
+                <a href="https://github.com/CaelumOS/CaelumOS" target="_blank" class="btn-hover bg-dark text-white p-4 sm:p-6 rounded-xl text-center flex flex-col items-center justify-center block">
                     <i class="fa fa-github text-2xl sm:text-3xl mb-2 sm:mb-3"></i>
                     <h3 class="font-semibold text-sm sm:text-base">GitHub</h3>
                     <p class="text-xs sm:text-sm mt-1 text-gray-300" data-i18n="github_desc">提交反馈 贡献代码</p>
@@ -286,7 +286,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8 mb-6 sm:mb-8">
                 <div>
-                    <h3 class="text-lg sm:text-xl font-bold mb-2">ayakaOS</h3>
+                    <h3 class="text-lg sm:text-xl font-bold mb-2">CaelumOS</h3>
                     <p class="text-gray-400 text-xs sm:text-sm" data-i18n="based_on_arch">基于Arch Linux的专业发行版</p>
                 </div>
                 <div class="hidden md:block">
@@ -301,7 +301,7 @@
                 <div class="hidden lg:block">
                     <h4 class="font-semibold mb-3 text-sm sm:text-base" data-i18n="resources">资源</h4>
                     <ul class="space-y-1 sm:space-y-2 text-gray-400 text-xs sm:text-sm">
-                        <li><a href="https://github.com/ayakaOS/ayakaOS" target="_blank" class="hover:text-primary transition-colors">GitHub 仓库</a></li>
+                        <li><a href="https://github.com/CaelumOS/CaelumOS" target="_blank" class="hover:text-primary transition-colors">GitHub 仓库</a></li>
                         <li><a href="https://space.bilibili.com/3691009835797244" class="hover:text-primary transition-colors">哔哩哔哩</a></li>
                         <li><a href="https://qm.qq.com/q/Zi96aWI8AE" class="hover:text-primary transition-colors">QQ群</a></li>
                         <li><a href="https://www.gnu.org/licenses/gpl-3.0.en.html" class="hover:text-primary transition-colors">Open Source License</a></li>
@@ -314,11 +314,11 @@
                 <a href="#docs" class="hover:text-primary" data-i18n="docs">文档</a>
                 <a href="#team" class="hover:text-primary" data-i18n="team">团队</a>
                 <a href="#community" class="hover:text-primary" data-i18n="community">社区</a>
-                <a href="https://github.com/ayakaOS/ayakaOS" target="_blank" class="hover:text-primary">GitHub</a>
+                <a href="https://github.com/CaelumOS/CaelumOS" target="_blank" class="hover:text-primary">GitHub</a>
                 <a href="https://ayakaos.de5.net/" class="hover:text-primary" data-i18n="blog">博客</a>
             </div>
             <div class="border-t border-gray-800 pt-6 sm:pt-8 text-center text-gray-500 text-xs sm:text-sm">
-                © ayakaOS Team
+                © CaelumOS Team
             </div>
         </div>
     </footer>
